// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar component Will render correctly for administrators 1`] = `
<nav class="navbar" role="navigation" aria-label="main navigation">
  <div class="container">
    <div class="navbar-brand"><a aria-current="page" href="/" class="router-link-active router-link-exact-active navbar-item"><img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"></a><a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="nav-main-menu"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div id="nav-main-menu" class="navbar-menu">
      <div class="navbar-start"><a aria-current="page" href="/" class="router-link-active router-link-exact-active navbar-item">Home</a><a href="/manageUsers" class="navbar-item"> Manage Users </a></div>
      <div class="navbar-end">
        <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">Jonny C</a>
          <div class="navbar-dropdown"><a href="/profile" class="navbar-item">Profile</a>
            <hr class="navbar-divider"><a href="/account" class="navbar-item">Manage Account</a><a href="/account/changePassword" class="navbar-item">Change Password</a><a href="/account/settings" class="navbar-item">Settings</a>
            <hr class="navbar-divider"><a href="/api/auth/logout" class="navbar-item">Logout</a>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;

exports[`NavBar component Will render correctly for anonymous users 1`] = `
<nav class="navbar" role="navigation" aria-label="main navigation">
  <div class="container">
    <div class="navbar-brand"><a href="/" class="navbar-item"><img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"></a><a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="nav-main-menu"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div id="nav-main-menu" class="navbar-menu">
      <div class="navbar-start"><a href="/" class="navbar-item">Home</a>
        <!--v-if-->
      </div>
      <div class="navbar-end"><a href="/signup" class="navbar-item">Sign Up</a><a href="/login" class="navbar-item"><button class="button is-primary">Login</button></a></div>
    </div>
  </div>
</nav>
`;

exports[`NavBar component Will render correctly for regular users 1`] = `
<nav class="navbar" role="navigation" aria-label="main navigation">
  <div class="container">
    <div class="navbar-brand"><a aria-current="page" href="/" class="router-link-active router-link-exact-active navbar-item"><img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"></a><a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="nav-main-menu"><span aria-hidden="true"></span><span aria-hidden="true"></span><span aria-hidden="true"></span></a></div>
    <div id="nav-main-menu" class="navbar-menu">
      <div class="navbar-start"><a aria-current="page" href="/" class="router-link-active router-link-exact-active navbar-item">Home</a><a href="/manageUsers" class="navbar-item"> Manage Users </a></div>
      <div class="navbar-end">
        <div class="navbar-item has-dropdown is-hoverable"><a class="navbar-link">Jonny C</a>
          <div class="navbar-dropdown"><a href="/profile" class="navbar-item">Profile</a>
            <hr class="navbar-divider"><a href="/account" class="navbar-item">Manage Account</a><a href="/account/changePassword" class="navbar-item">Change Password</a><a href="/account/settings" class="navbar-item">Settings</a>
            <hr class="navbar-divider"><a href="/api/auth/logout" class="navbar-item">Logout</a>
          </div>
        </div>
      </div>
    </div>
  </div>
</nav>
`;
